# autoresearch

./: finetune.py  program_finetune.md  pyproject.toml
